--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 
-   <!-- Navbar -->
+  <!-- Navbar -->
   <nav class="navbar" aria-label="Navigasi utama">
     <div class="logo" onclick="showView('dashboard-main')">
       <i class="fa-solid fa-house"></i> Dashboard
     </div>
     <ul class="nav-links">
-      <li><a href="#tentang"class="active">Tentang</a></li>
+      <li><a href="#tentang" class="active">Tentang</a></li>
       <li><a href="#tujuan" class="active">Tujuan</a></li>
       <li><a href="#manfaat" class="active">Manfaat</a></li>
       <li><a href="#improvement-tools" class="active">Improvement Tools</a></li>
@@ -28,58 +28,27 @@
     <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
   </nav>
 
- <!-- Hero -->
+  <!-- Hero -->
   <header class="hero">
     <h1>QUALITY IMPROVEMENT TEAM (QIT)</h1>
     <p>"Saatnya Paragonian berkolaborasi, berinovasi, dan menjelajah ide-ide baru demi perbaikan berkelanjutan"</p>
   </header>
 
-
- <!-- Tombol-tombol dashboard -->
-<div class="dashboard-buttons" style="background: linear-gradient(135deg, #1a4da0, #1abc9c); padding: 20px; border-radius: 12px; display:flex; flex-wrap:wrap; gap:15px; justify-content:center;">
-  <button onclick="window.open('https://docs.google.com/spreadsheets/d/1nPfCcH1rqfWKdBUrGApuAeBG8v6L28MUy1NbN01Q_oM/edit?usp=sharing', '_blank')">
-    Pembentukan QIT Batch 8
-  </button>
-
-  <button onclick="window.open('https://bit.ly/PresensiTimQIT8', '_blank')">
-    Absensi Tim
-  </button>
-
-  <button onclick="window.open('https://forms.office.com/pages/responsepage.aspx?id=5kTD0iZi-kqUSmLWzg2YwncIviPZneFJmgn26ooAEdNUNkVVQk9ZUTdBU1owUEtaQjRQM0hLSTdPWi4u&route=shorturl', '_blank')">
-    Absensi Fasilitator
-  </button>
-
-  <button onclick="window.open('https://docs.google.com/spreadsheets/d/1zgF_0E_Y6jEpqIvueQB2y9sN46AkQVp_ZCNwtrnk138/edit?usp=sharing', '_blank')">
-    Transparansi Point Challenge
-  </button>
-
-  <button onclick="window.open('https://lookerstudio.google.com/reporting/1b04bdd5-778c-4de3-9196-ae59b4ac6510', '_blank')">
-    Dashboard Point Challenge
-  </button>
-
-  <button onclick="window.open('https://drive.google.com/drive/folders/1W5gHlxvRP8CWRybq4P9TarUm_TlhhKAY?usp=drive_link', '_blank')">
-    Data Pendukung
-  </button>
-
-  <button onclick="window.open('https://docs.google.com/spreadsheets/d/1GIutLMyN0d4TI1uabxKaWwI0MJxvJB6JqkWmbGxhuKk/edit?usp=sharing', '_blank')">
-    Referensi Quality Objective Section
-  </button>
-
-  <button onclick="window.open('https://docs.google.com/spreadsheets/d/1ZA8Ctgn4u5IT5DJV3mSYJZnL-ozP0gK-QDjzMrBlbQQ/edit?usp=sharing', '_blank')">
-    Template Risalah
-  </button>
-
-    <button onclick="window.open('https://drive.google.com/drive/folders/11LQ1f6aajnKm4xXcTXF02ZCRdL787mJI?usp=drive_link', '_blank')">
-    Summary Best Risalah
-  </button>
-
-<button onclick="window.open('https://docs.google.com/presentation/d/19ARMzfjG7dUlG5R0UNV1orJ73pMlhn8YG56oJKtl3qM/edit?usp=sharing', '_blank')">
-    Modul Risalah
-  </button>
-</div>
-
-
-
+  <!-- Tombol Dashboard -->
+  <div class="dashboard-buttons" style="background: linear-gradient(135deg, #1a4da0, #1abc9c); padding: 20px; border-radius: 12px; display:flex; flex-wrap:wrap; gap:15px; justify-content:center;">
+    <button onclick="window.open('https://docs.google.com/spreadsheets/d/1nPfCcH1rqfWKdBUrGApuAeBG8v6L28MUy1NbN01Q_oM/edit?usp=sharing', '_blank')">
+      Pembentukan QIT Batch 8
+    </button>
+    <button onclick="window.open('https://bit.ly/PresensiTimQIT8', '_blank')">Absensi Tim</button>
+    <button onclick="window.open('https://forms.office.com/pages/responsepage.aspx?id=5kTD0iZi-kqUSmLWzg2YwncIviPZneFJmgn26ooAEdNUNkVVQk9ZUTdBU1owUEtaQjRQM0hLSTdPWi4u&route=shorturl', '_blank')">Absensi Fasilitator</button>
+    <button onclick="window.open('https://docs.google.com/spreadsheets/d/1zgF_0E_Y6jEpqIvueQB2y9sN46AkQVp_ZCNwtrnk138/edit?usp=sharing', '_blank')">Transparansi Point Challenge</button>
+    <button onclick="window.open('https://lookerstudio.google.com/reporting/1b04bdd5-778c-4de3-9196-ae59b4ac6510', '_blank')">Dashboard Point Challenge</button>
+    <button onclick="window.open('https://drive.google.com/drive/folders/1W5gHlxvRP8CWRybq4P9TarUm_TlhhKAY?usp=drive_link', '_blank')">Data Pendukung</button>
+    <button onclick="window.open('https://docs.google.com/spreadsheets/d/1GIutLMyN0d4TI1uabxKaWwI0MJxvJB6JqkWmbGxhuKk/edit?usp=sharing', '_blank')">Referensi Quality Objective Section</button>
+    <button onclick="window.open('https://docs.google.com/spreadsheets/d/1ZA8Ctgn4u5IT5DJV3mSYJZnL-ozP0gK-QDjzMrBlbQQ/edit?usp=sharing', '_blank')">Template Risalah</button>
+    <button onclick="window.open('https://drive.google.com/drive/folders/11LQ1f6aajnKm4xXcTXF02ZCRdL787mJI?usp=drive_link', '_blank')">Summary Best Risalah</button>
+    <button onclick="window.open('https://docs.google.com/presentation/d/19ARMzfjG7dUlG5R0UNV1orJ73pMlhn8YG56oJKtl3qM/edit?usp=sharing', '_blank')">Modul Risalah</button>
+  </div>
 
   <!-- Tentang -->
   <section id="tentang" class="content">
@@ -165,18 +134,19 @@
     </div>
   </section>
 
-
   <!-- Video -->
 <section id="video" class="content">
   <h2>Video</h2>
   <div class="video-gallery">
-    <!-- Video MP4 -->
-    <video width="320" height="240" controls>
-      <source src="VIDEO.MP4" type="video/mp4">
-      Browser Anda tidak mendukung video.
-    </video>
+    <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/NwyZ22DR9o0"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
   </div>
-  </section>   
+</section>
 
 
   <!-- Kontak -->
@@ -189,10 +159,6 @@
     <p><strong>Whatsapp Deden Haitami:</strong> (+62) 878-1404-5175 - Jatake 6 & 3</p>
     <p><strong>Alamat:</strong> Jl. Raya Industri IV Blok AG No.8, Kota Tangerang, Banten 15135</p>
   </section>
-
-
-
-
 
   <!-- Dashboard Views -->
   <section id="dashboard-views" class="view content">
@@ -223,6 +189,7 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Quality Improvement Team</p>
   </footer>
@@ -230,12 +197,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
